--- a/index.html
+++ b/index.html
@@ -13,21 +13,28 @@
 
 </head>
 <body>
-  <div class="outer-nav">
-    <img src="images/logo.svg" alt="logo" />
-    <nav class="inner-nav">
-      <ul>
-        <li>Features</li>
-        <li>Company</li>
-        <li>Careers</li>
-        <li>About</li>
-      </ul>
-    </nav>
-    <div class="login-btns">
-      <button>Login</button>
-      <button>Register</button>
+  <header>
+    <div class="outer-nav">
+      <img src="images/logo.svg" alt="logo" />
+      <nav class="inner-nav">
+        <ul>
+          <li>Features</li>
+          <li>Company</li>
+          <li>Careers</li>
+          <li>About</li>
+        </ul>
+      </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+      <div class="login-btns">
+        <button>Login</button>
+        <button>Register</button>
+      </div>
     </div>
-  </div>
+  </header>
   <main>
     <div class="hero-section">
       <h1>Make remote work</h1>
