--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <ul>
           <li>Features</li>
           <li>Company</li>
-          <li>Careers</li>
-          <li>About</li>
+          <li><a href="http://#" target="_blank" rel="noopener noreferrer">Careers</a></li>
+          <li><a href="http:/#/" target="_blank" rel="noopener noreferrer">About</a></li>
         </ul>
       </nav>
       <div class="hamburger">
@@ -43,7 +43,7 @@
       </p>
       <button class="cta">Learn more</button>
       <div class="client-logos">
-        <ul>
+        <ul class="client-list">
           <li><img src="images/client-databiz.svg" alt="logo"></li>
           <li><img src="images/client-audiophile.svg" alt="logo"></li>
           <li><img src="images/client-meet.svg" alt="logo"></li>
