--- a/index.html
+++ b/index.html
@@ -37,18 +37,20 @@
   </header>
   <main>
     <div class="hero-section">
-      <h1>Make remote work</h1>
-      <p>
-        Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.
-      </p>
-      <button class="cta">Learn more</button>
-      <div class="client-logos">
-        <ul class="client-list">
-          <li><img src="images/client-databiz.svg" alt="logo"></li>
-          <li><img src="images/client-audiophile.svg" alt="logo"></li>
-          <li><img src="images/client-meet.svg" alt="logo"></li>
-          <li><img src="images/client-maker.svg" alt="logo"></li>
-        </ul>
+      <div class="container">
+        <h1>Make remote work</h1>
+        <p>
+          Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.
+        </p>
+        <button class="cta-btn">Learn more</button>
+        <div class="client-logos">
+          <ul class="client-list">
+            <li><img src="images/client-databiz.svg" alt="logo"></li>
+            <li><img src="images/client-audiophile.svg" alt="logo"></li>
+            <li><img src="images/client-meet.svg" alt="logo"></li>
+            <li><img src="images/client-maker.svg" alt="logo"></li>
+          </ul>
+        </div>
       </div>
       <picture>
         <source media="(min-width: 1000px)" srcset="images/image-hero-desktop-1280w.png" alt="colourful vector shapes surrounding man using laptop">
