style: set up hamburger menu

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div class="outer-nav">
       <img src="images/logo.svg" alt="logo" />
       <nav class="inner-nav">
-        <ul>
-          <li>Features</li>
-          <li>Company</li>
-          <li><a href="http://#" target="_blank" rel="noopener noreferrer">Careers</a></li>
-          <li><a href="http:/#/" target="_blank" rel="noopener noreferrer">About</a></li>
+        <ul class="nav-menu">
+          <li class="nav-item">Features</li>
+          <li class="nav-item">Company</li>
+          <li class="nav-item"><a href="http://#" target="_blank" rel="noopener noreferrer">Careers</a></li>
+          <li class="nav-item"><a href="http:/#/" target="_blank" rel="noopener noreferrer">About</a></li>
         </ul>
       </nav>
       <div class="hamburger">
